# dpdk

./: MAINTAINERS
app/test/: test_atomic.c  test_cmdline_ipaddr.c  test_cmdline_num.c  test_hash_functions.c  test_stack.c  test_stack_perf.c  test_xmmt_ops.h
app/test-acl/: main.c
app/test-pmd/: config.c
config/: defconfig_s390x-native-linux-gcc  defconfig_s390x-native-linuxapp-gcc  meson.build
config/s390x/: meson.build
doc/guides/nics/features/: i40e.ini  i40e_vec.ini
doc/guides/rel_notes/: release_19_05.rst
drivers/net/i40e/: Makefile  i40e_rxtx_vec_s390x.c
drivers/net/memif/: rte_eth_memif.h
drivers/net/mlx5/: mlx5_rxtx.c  mlx5_rxtx.h
examples/l3fwd/: l3fwd_em.c  l3fwd_lpm_s390x.h  l3fwd_s390x.h
lib/librte_acl/: Makefile  acl.h  acl_bld.c  acl_gen.c  acl_run.h  acl_run_s390x.c  acl_run_s390x.h  acl_run_scalar.c  rte_acl.c  rte_acl.h
lib/librte_bpf/: bpf_impl.h  bpf_load.c  bpf_validate.c
lib/librte_eal/common/arch/s390x/: meson.build  rte_cpuflags.c  rte_cycles.c  rte_hypervisor.c
lib/librte_eal/common/include/arch/s390x/: rte_atomic.h  rte_atomic.h.old  rte_byteorder.h  rte_cpuflags.h  rte_cycles.h  rte_io.h  rte_memcpy.h  rte_pause.h  rte_prefetch.h  (+4 more)
lib/librte_ethdev/: rte_ethdev_pci.h
lib/librte_hash/: rte_fbk_hash.h
lib/librte_lpm/: Makefile  meson.build  rte_lpm.h  rte_lpm6.c  rte_lpm_s390x.h
lib/librte_mbuf/: rte_mbuf.h
lib/librte_net/: rte_ip.h
mk/: rte.cpuflags.mk
mk/arch/s390x/: rte.vars.mk
test/test/: test_cmdline_ipaddr.c  test_cmdline_num.c  test_hash.c  test_lpm.c  test_xmmt_ops.h
test/test-acl/: main.c
